[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "randsymbols"
version = "1.0.0"
description = "Generate random symbols"
readme = "README.md"
authors = [{ name = "trurlem" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["random", "cli"]
dependencies = [
    "typer[all] >= 0.4",
    "emojis >= 0.6",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "bumpver"]

[project.urls]
Homepage = "https://github.com/trurlem/randsymbols"

[project.scripts]
randsymbols = "randsymbols.__main__:app"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]
